internal/parser/theorem_parser.go
// Code generated from Theorem.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // Theorem
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type TheoremParser struct {
	*antlr.BaseParser
}

var TheoremParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func theoremParserInit() {
	staticData := &TheoremParserStaticData
	staticData.LiteralNames = []string{
		"", "'Authorizations'", "'{'", "'}'", "'ImpliedRelations'", "'=>'",
		"'#'", "'Delegations'", "'>'", "'@'", "':'", "'!'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "NEGATION", "OPERATION",
		"ID", "STRING", "DID", "HEX", "HEXDIG", "COMMENT", "WS", "NL",
	}
	staticData.RuleNames = []string{
		"relationship_set", "policy_thorems", "term", "authorization_theorems",
		"authorization_theorem", "implied_relations", "implied_relation", "object_rel",
		"delegation_theorems", "delegation_theorem", "relationship", "operation",
		"subject", "object", "object_id", "relation", "resource", "actorid",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// TheoremParserInit initializes any static state used to implement TheoremParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewTheoremParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func TheoremParserInit() {
	staticData := &TheoremParserStaticData
	staticData.once.Do(theoremParserInit)
}

// NewTheoremParser produces a new parser instance for the optional input antlr.TokenStream.
func NewTheoremParser(input antlr.TokenStream) *TheoremParser {
	TheoremParserInit()
	this := new(TheoremParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &TheoremParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Theorem.g4"

	return this
}

// TheoremParser tokens.
const (
	TheoremParserEOF       = antlr.TokenEOF
	TheoremParserT__0      = 1
	TheoremParserT__1      = 2
	TheoremParserT__2      = 3
	TheoremParserT__3      = 4
	TheoremParserT__4      = 5
	TheoremParserT__5      = 6
	TheoremParserT__6      = 7
	TheoremParserT__7      = 8
	TheoremParserT__8      = 9
	TheoremParserT__9      = 10
	TheoremParserNEGATION  = 11
	TheoremParserOPERATION = 12
	TheoremParserID        = 13
	TheoremParserSTRING    = 14
	TheoremParserDID       = 15
	TheoremParserHEX       = 16
	TheoremParserHEXDIG    = 17
	TheoremParserCOMMENT   = 18
	TheoremParserWS        = 19
	TheoremParserNL        = 20
)

// TheoremParser rules.
const (
	TheoremParserRULE_relationship_set       = 0
	TheoremParserRULE_policy_thorems         = 1
	TheoremParserRULE_term                   = 2
	TheoremParserRULE_authorization_theorems = 3
	TheoremParserRULE_authorization_theorem  = 4
	TheoremParserRULE_implied_relations      = 5
	TheoremParserRULE_implied_relation       = 6
	TheoremParserRULE_object_rel             = 7
	TheoremParserRULE_delegation_theorems    = 8
	TheoremParserRULE_delegation_theorem     = 9
	TheoremParserRULE_relationship           = 10
	TheoremParserRULE_operation              = 11
	TheoremParserRULE_subject                = 12
	TheoremParserRULE_object                 = 13
	TheoremParserRULE_object_id              = 14
	TheoremParserRULE_relation               = 15
	TheoremParserRULE_resource               = 16
	TheoremParserRULE_actorid                = 17
)

// IRelationship_setContext is an interface to support dynamic dispatch.
type IRelationship_setContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllRelationship() []IRelationshipContext
	Relationship(i int) IRelationshipContext

	// IsRelationship_setContext differentiates from other interfaces.
	IsRelationship_setContext()
}

type Relationship_setContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRelationship_setContext() *Relationship_setContext {
	var p = new(Relationship_setContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TheoremParserRULE_relationship_set
	return p
}

func InitEmptyRelationship_setContext(p *Relationship_setContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TheoremParserRULE_relationship_set
}

func (*Relationship_setContext) IsRelationship_setContext() {}

func NewRelationship_setContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Relationship_setContext {
	var p = new(Relationship_setContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TheoremParserRULE_relationship_set

	return p
}

func (s *Relationship_setContext) GetParser() antlr.Parser { return s.parser }

func (s *Relationship_setContext) AllRelationship() []IRelationshipContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRelationshipContext); ok {
			len++
		}
	}

	tst := make([]IRelationshipContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRelationshipContext); ok {
			tst[i] = t.(IRelationshipContext)
			i++
		}
	}

	return tst
}

func (s *Relationship_setContext) Relationship(i int) IRelationshipContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRelationshipContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRelationshipContext)
}

func (s *Relationship_setContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Relationship_setContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Relationship_setContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TheoremVisitor:
		return t.VisitRelationship_set(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TheoremParser) Relationship_set() (localctx IRelationship_setContext) {
	localctx = NewRelationship_setContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, TheoremParserRULE_relationship_set)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(39)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == TheoremParserID {
		{
			p.SetState(36)
			p.Relationship()
		}

		p.SetState(41)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPolicy_thoremsContext is an interface to support dynamic dispatch.
type IPolicy_thoremsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Authorization_theorems() IAuthorization_theoremsContext
	Delegation_theorems() IDelegation_theoremsContext

	// IsPolicy_thoremsContext differentiates from other interfaces.
	IsPolicy_thoremsContext()
}

type Policy_thoremsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPolicy_thoremsContext() *Policy_thoremsContext {
	var p = new(Policy_thoremsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TheoremParserRULE_policy_thorems
	return p
}

func InitEmptyPolicy_thoremsContext(p *Policy_thoremsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TheoremParserRULE_policy_thorems
}

func (*Policy_thoremsContext) IsPolicy_thoremsContext() {}

func NewPolicy_thoremsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Policy_thoremsContext {
	var p = new(Policy_thoremsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TheoremParserRULE_policy_thorems

	return p
}

func (s *Policy_thoremsContext) GetParser() antlr.Parser { return s.parser }

func (s *Policy_thoremsContext) Authorization_theorems() IAuthorization_theoremsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAuthorization_theoremsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAuthorization_theoremsContext)
}

func (s *Policy_thoremsContext) Delegation_theorems() IDelegation_theoremsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDelegation_theoremsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDelegation_theoremsContext)
}

func (s *Policy_thoremsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Policy_thoremsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Policy_thoremsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TheoremVisitor:
		return t.VisitPolicy_thorems(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TheoremParser) Policy_thorems() (localctx IPolicy_thoremsContext) {
	localctx = NewPolicy_thoremsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, TheoremParserRULE_policy_thorems)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.Authorization_theorems()
	}
	{
		p.SetState(43)
		p.Delegation_theorems()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITermContext is an interface to support dynamic dispatch.
type ITermContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Authorization_theorems() IAuthorization_theoremsContext
	Implied_relations() IImplied_relationsContext
	Delegation_theorems() IDelegation_theoremsContext

	// IsTermContext differentiates from other interfaces.
	IsTermContext()
}

type TermContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTermContext() *TermContext {
	var p = new(TermContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TheoremParserRULE_term
	return p
}

func InitEmptyTermContext(p *TermContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TheoremParserRULE_term
}

func (*TermContext) IsTermContext() {}

func NewTermContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TermContext {
	var p = new(TermContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TheoremParserRULE_term

	return p
}

func (s *TermContext) GetParser() antlr.Parser { return s.parser }

func (s *TermContext) Authorization_theorems() IAuthorization_theoremsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAuthorization_theoremsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAuthorization_theoremsContext)
}

func (s *TermContext) Implied_relations() IImplied_relationsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImplied_relationsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImplied_relationsContext)
}

func (s *TermContext) Delegation_theorems() IDelegation_theoremsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDelegation_theoremsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDelegation_theoremsContext)
}

func (s *TermContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TermContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TermContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TheoremVisitor:
		return t.VisitTerm(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TheoremParser) Term() (localctx ITermContext) {
	localctx = NewTermContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, TheoremParserRULE_term)
	p.SetState(48)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case TheoremParserT__0:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(45)
			p.Authorization_theorems()
		}

	case TheoremParserT__3:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(46)
			p.Implied_relations()
		}

	case TheoremParserT__6:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(47)
			p.Delegation_theorems()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAuthorization_theoremsContext is an interface to support dynamic dispatch.
type IAuthorization_theoremsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllAuthorization_theorem() []IAuthorization_theoremContext
	Authorization_theorem(i int) IAuthorization_theoremContext

	// IsAuthorization_theoremsContext differentiates from other interfaces.
	IsAuthorization_theoremsContext()
}

type Authorization_theoremsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAuthorization_theoremsContext() *Authorization_theoremsContext {
	var p = new(Authorization_theoremsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TheoremParserRULE_authorization_theorems
	return p
}

func InitEmptyAuthorization_theoremsContext(p *Authorization_theoremsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TheoremParserRULE_authorization_theorems
}

func (*Authorization_theoremsContext) IsAuthorization_theoremsContext() {}

func NewAuthorization_theoremsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Authorization_theoremsContext {
	var p = new(Authorization_theoremsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TheoremParserRULE_authorization_theorems

	return p
}

func (s *Authorization_theoremsContext) GetParser() antlr.Parser { return s.parser }

func (s *Authorization_theoremsContext) AllAuthorization_theorem() []IAuthorization_theoremContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IAuthorization_theoremContext); ok {
			len++
		}
	}

	tst := make([]IAuthorization_theoremContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IAuthorization_theoremContext); ok {
			tst[i] = t.(IAuthorization_theoremContext)
			i++
		}
	}

	return tst
}

func (s *Authorization_theoremsContext) Authorization_theorem(i int) IAuthorization_theoremContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAuthorization_theoremContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAuthorization_theoremContext)
}

func (s *Authorization_theoremsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Authorization_theoremsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Authorization_theoremsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TheoremVisitor:
		return t.VisitAuthorization_theorems(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TheoremParser) Authorization_theorems() (localctx IAuthorization_theoremsContext) {
	localctx = NewAuthorization_theoremsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, TheoremParserRULE_authorization_theorems)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(50)
		p.Match(TheoremParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(51)
		p.Match(TheoremParserT__1)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(55)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == TheoremParserNEGATION || _la == TheoremParserID {
		{
			p.SetState(52)
			p.Authorization_theorem()
		}

		p.SetState(57)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(58)
		p.Match(TheoremParserT__2)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAuthorization_theoremContext is an interface to support dynamic dispatch.
type IAuthorization_theoremContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Relationship() IRelationshipContext
	NEGATION() antlr.TerminalNode

	// IsAuthorization_theoremContext differentiates from other interfaces.
	IsAuthorization_theoremContext()
}

type Authorization_theoremContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAuthorization_theoremContext() *Authorization_theoremContext {
	var p = new(Authorization_theoremContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TheoremParserRULE_authorization_theorem
	return p
}

func InitEmptyAuthorization_theoremContext(p *Authorization_theoremContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TheoremParserRULE_authorization_theorem
}

func (*Authorization_theoremContext) IsAuthorization_theoremContext() {}

func NewAuthorization_theoremContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Authorization_theoremContext {
	var p = new(Authorization_theoremContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TheoremParserRULE_authorization_theorem

	return p
}

func (s *Authorization_theoremContext) GetParser() antlr.Parser { return s.parser }

func (s *Authorization_theoremContext) Relationship() IRelationshipContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRelationshipContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRelationshipContext)
}

func (s *Authorization_theoremContext) NEGATION() antlr.TerminalNode {
	return s.GetToken(TheoremParserNEGATION, 0)
}

func (s *Authorization_theoremContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Authorization_theoremContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Authorization_theoremContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TheoremVisitor:
		return t.VisitAuthorization_theorem(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TheoremParser) Authorization_theorem() (localctx IAuthorization_theoremContext) {
	localctx = NewAuthorization_theoremContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, TheoremParserRULE_authorization_theorem)
	p.SetState(63)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case TheoremParserID:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(60)
			p.Relationship()
		}

	case TheoremParserNEGATION:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(61)
			p.Match(TheoremParserNEGATION)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(62)
			p.Relationship()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IImplied_relationsContext is an interface to support dynamic dispatch.
type IImplied_relationsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllImplied_relation() []IImplied_relationContext
	Implied_relation(i int) IImplied_relationContext

	// IsImplied_relationsContext differentiates from other interfaces.
	IsImplied_relationsContext()
}

type Implied_relationsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImplied_relationsContext() *Implied_relationsContext {
	var p = new(Implied_relationsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TheoremParserRULE_implied_relations
	return p
}

func InitEmptyImplied_relationsContext(p *Implied_relationsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TheoremParserRULE_implied_relations
}

func (*Implied_relationsContext) IsImplied_relationsContext() {}

func NewImplied_relationsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Implied_relationsContext {
	var p = new(Implied_relationsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TheoremParserRULE_implied_relations

	return p
}

func (s *Implied_relationsContext) GetParser() antlr.Parser { return s.parser }

func (s *Implied_relationsContext) AllImplied_relation() []IImplied_relationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IImplied_relationContext); ok {
			len++
		}
	}

	tst := make([]IImplied_relationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IImplied_relationContext); ok {
			tst[i] = t.(IImplied_relationContext)
			i++
		}
	}

	return tst
}

func (s *Implied_relationsContext) Implied_relation(i int) IImplied_relationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImplied_relationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImplied_relationContext)
}

func (s *Implied_relationsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Implied_relationsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Implied_relationsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TheoremVisitor:
		return t.VisitImplied_relations(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TheoremParser) Implied_relations() (localctx IImplied_relationsContext) {
	localctx = NewImplied_relationsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, TheoremParserRULE_implied_relations)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(65)
		p.Match(TheoremParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(66)
		p.Match(TheoremParserT__1)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(70)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == TheoremParserID {
		{
			p.SetState(67)
			p.Implied_relation()
		}

		p.SetState(72)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(73)
		p.Match(TheoremParserT__2)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IImplied_relationContext is an interface to support dynamic dispatch.
type IImplied_relationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllObject_rel() []IObject_relContext
	Object_rel(i int) IObject_relContext

	// IsImplied_relationContext differentiates from other interfaces.
	IsImplied_relationContext()
}

type Implied_relationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImplied_relationContext() *Implied_relationContext {
	var p = new(Implied_relationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TheoremParserRULE_implied_relation
	return p
}

func InitEmptyImplied_relationContext(p *Implied_relationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TheoremParserRULE_implied_relation
}

func (*Implied_relationContext) IsImplied_relationContext() {}

func NewImplied_relationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Implied_relationContext {
	var p = new(Implied_relationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TheoremParserRULE_implied_relation

	return p
}

func (s *Implied_relationContext) GetParser() antlr.Parser { return s.parser }

func (s *Implied_relationContext) AllObject_rel() []IObject_relContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IObject_relContext); ok {
			len++
		}
	}

	tst := make([]IObject_relContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IObject_relContext); ok {
			tst[i] = t.(IObject_relContext)
			i++
		}
	}

	return tst
}

func (s *Implied_relationContext) Object_rel(i int) IObject_relContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IObject_relContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IObject_relContext)
}

func (s *Implied_relationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Implied_relationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Implied_relationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TheoremVisitor:
		return t.VisitImplied_relation(s)

	default:
		return t.VisitChildren(s)
	}
}
